[package]

	name    = "torset"
	version = "18.9.4"
	authors = [ "Naja Melan" ]
	edition = "2018"


[lib]

	name = "libtorset"
	path = "src/libtorset.rs"


[[bin]]

	name = "torset"
	path = "src/main.rs"


[dependencies]

	failure     = ">= 0.1.1"
	chrono      = ">= 0.4.0"
	regex       = ">= 0.2.5"
	lazy_static = ">= 1"
