[package]

	name    = "torset"
	version = "19.2.10"
	authors = [ "Naja Melan <najamelan on autistici.org>" ]
	edition = "2018"
	license = "Unlicense"


[lib]

	name = "libtorset"
	path = "src/libtorset.rs"


[[bin]]

	name = "torset"
	path = "src/main.rs"


[dependencies]

	anyhow     = "1"
	chrono      = "0.4.21"
	clap        = "2"
	env_logger  = "0.8"
	log         = "0.4"
